# django-start

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  django-start.py  makefile  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml
django_start/: main.py  test_api.py
django_start/automate/: application.py  settings.py  templates.py
django_start/tests/: test_DjangoApplication.py  test_appSettings.py  test_create_dir.py  test_find_specific_dir.py  test_get_dirs.py  test_is_exist.py  test_normalize_path.py  test_projectSettings.py  test_read_file.py  test_run_command.py  test_settings.py  test_write_file.py
django_start/utils/: helpers.py
djstartlib/: app_manager.py  djstart_interface.py  hellper.py  main.py  project_manager.py  update_files.py  version.py
djstartlib/models/: __init__.py  app_manager.py  djstart_interface.py  project_manager.py
djstartlib/models/utils/: __init__.py  environment.py  hellper.py  helper.py
djstartlib/test/: requirements.txt
djstartlib/test/app/: urls.py  views.py
djstartlib/test/app/templates/app/: index.html
djstartlib/test/core/: settings.py  urls.py
djstartlib/test/my_env/: pyvenv.cfg
djstartlib/test/my_env/Scripts/: activate  activate.bat
src/django_start/: __init__.py  django_start.py  main.py  update_files.py
src/django_start/app/: __init__.py  manager.py
src/django_start/project/: __init__.py  manager.py
src/django_start/virtualenv/: virtualenv.py
