[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django_start"
version = "0.1.0"
authors = [
  { name="Islam Kamel", email="islam.kamel@agr.svu.edu" },
]
description = "A small tools to create django project with restframework"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/islam-kamel/django-start"
"Bug Tracker" = "https://github.com/islam-kamel/django-start/issues"
