[metadata]
name = django_start_automate
version = 1.0.4
description = Useful tool to start new project of django with publish first application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/islam-kamel/django-start
author = Islam Kamel
author_email = islam.kamel@agr.svu.edu.eg
license = MIT
license_file = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Home Automation
    Topic :: Software Development :: Code Generators
    Topic :: Terminals
keywords =
    Django
    djangoAutomation
    AutomationDjango
    djangoStartProject
    DjangoStart
    StartDjango
    AutomatedDjango
    DjangoAutomated
    django-start
    DjangoScript
    AutomatedDjangoStartScript
    DjangoAutomatedStart


[options]
packages = find:
install_requires =
    requests
python_requires = >=3.7

[options.entry_points]
console_scripts =
    django-start = djstartlib.main:main
