[metadata]
name = django_start_automate
version = 1.0.4
description = Prepare a new Django project quickly and automatically and more wonderful things that save you time By django start
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/islam-kamel/django-start
author = Islam Kamel
author_email = islam.kamel@agr.svu.edu.eg
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Framework :: Django
    Framework :: Django :: 3
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Code Generators
    Topic :: Terminals
keywords = Prepare a new Django project quickly and automatically and more wonderful things that save you time By django start


[options]
packages = find:
install_requires = click
python_requires = >=3.7

[options.entry_points]
console_scripts =
    django-start = djstartlib.main:main
