[metadata]
name = django_start_automate
version = 1.1.4
description = Prepare a new Django project quickly and automatically and more wonderful things that save you time By django start
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/islam-kamel/django-start
author = Islam Kamel
author_email = islam.kamel@agr.svu.edu.eg
license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Framework :: Django
    Framework :: Django :: 3
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Code Generators
    Topic :: Terminals
    Topic :: Software Development :: Libraries :: Python Modules

keywords =
    django-start
    django start
    djngo start
    django start project
    django project
    django automate
    automate django
    start
    start automate
    django build
    django tools
    automate start
    djangostart
    django_start
    django-start-automate
    django_start_automate
    django start automate
    django script
    django cli
    django tool
    python cli
    python tool
    python tools
    python script


[options]
packages = find:
install_requires = click
python_requires = >=3.7

[options.entry_points]
console_scripts =
    django-start = djstartlib.main:main
    django-version = djstartlib.version:main
